--- a/payment.html
+++ b/payment.html
@@ -1,161 +1,313 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Checkout | Chat Point</title>
-    <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;500;600;700;800&display=swap" rel="stylesheet" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" />
-    <style>
-        /* (Your full CSS from before - unchanged) */
-        :root {
-            --bg: #0a0a0a;
-            --card: #111111;
-            --border: #222222;
-            --text: #e0e0e0;
-            --muted: #888888;
-            --accent: #00ff9d;
-            --accent2: #ff2e63;
-            --glow: 0 0 20px rgba(0, 255, 157, 0.3);
-        }
-        * { margin: 0; padding: 0; box-sizing: border-box; }
-        body { font-family: 'Outfit', sans-serif; background: var(--bg); color: var(--text); min-height: 100vh; }
-        /* ... rest of your CSS ... */
-    </style>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Checkout | ChatPoint</title>
+  <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;500;600;700;800&display=swap" rel="stylesheet" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" />
+  <style>
+    :root {
+      --bg: #0a0a0a;
+      --card: #111111;
+      --border: #222222;
+      --text: #e0e0e0;
+      --muted: #888888;
+      --accent: #00ff9d;
+      --accent2: #ff2e63;
+      --glow: 0 0 20px rgba(0, 255, 157, 0.3);
+    }
+    * { margin: 0; padding: 0; box-sizing: border-box; }
+    body {
+      font-family: 'Outfit', sans-serif;
+      background: var(--bg);
+      color: var(--text);
+      min-height: 100vh;
+      padding: 1rem;
+    }
+    .container {
+      max-width: 600px;
+      margin: 0 auto;
+      background: var(--card);
+      border-radius: 16px;
+      padding: 2rem;
+      border: 1px solid var(--border);
+      box-shadow: 0 10px 30px rgba(0, 0, 0, 0.5);
+    }
+    h2 { text-align: center; margin-bottom: 1.5rem; color: var(--accent); font-size: 1.8rem; }
+    .form-group { margin-bottom: 1.2rem; }
+    label { display: block; margin-bottom: 0.5rem; font-weight: 500; }
+    input, textarea {
+      width: 100%;
+      padding: 0.9rem;
+      border-radius: 10px;
+      border: 1px solid var(--border);
+      background: #1a1a1a;
+      color: var(--text);
+      font-size: 1rem;
+    }
+    input:focus, textarea:focus { outline: none; border-color: var(--accent); box-shadow: var(--glow); }
+    .cart-summary {
+      background: #1a1a1a;
+      padding: 1rem;
+      border-radius: 10px;
+      margin: 1.5rem 0;
+      border: 1px solid var(--border);
+    }
+    .cart-item {
+      display: flex;
+      justify-content: space-between;
+      padding: 0.5rem 0;
+      border-bottom: 1px solid var(--border);
+    }
+    .total-row {
+      font-weight: bold;
+      font-size: 1.2rem;
+      margin-top: 1rem;
+      padding-top: 1rem;
+      border-top: 2px solid var(--accent);
+    }
+    .btn {
+      width: 100%;
+      padding: 1rem;
+      font-size: 1.2rem;
+      font-weight: 700;
+      border: none;
+      border-radius: 12px;
+      background: var(--accent);
+      color: #000;
+      cursor: pointer;
+      margin-top: 1.5rem;
+      transition: all 0.3s;
+    }
+    .btn:hover { transform: translateY(-3px); box-shadow: var(--glow); }
+    .btn:disabled { background: #555; cursor: not-allowed; transform: none; }
+    .msg {
+      text-align: center;
+      padding: 1rem;
+      border-radius: 10px;
+      margin: 1rem 0;
+      font-weight: 600;
+    }
+    .success { background: #004d33; color: var(--accent); }
+    .error { background: #660000; color: #ff6b6b; }
+    .login-required {
+      text-align: center;
+      padding: 4rem 1rem;
+      color: var(--muted);
+    }
+    .login-required a {
+      color: var(--accent);
+      font-weight: 700;
+      text-decoration: none;
+    }
+  </style>
 </head>
 <body>
-    <div class="container" id="mainContainer"></div>
+  <div class="container" id="mainContainer">
+    <!-- Content will be injected here -->
+  </div>
 
-    <script>
-        const CART_KEY = "chatpoint_cart";
-        const USER_KEY = "chatpoint_user";
-        const API_BASE = "https://chatpoint1.onrender.com";
+  <script>
+    const CART_KEY = "chatpoint_cart";
+    const USER_KEY = "chatpoint_user";
+    const API_BASE = "https://chatpoint1.onrender.com"; // Update if needed
 
-        const PRIMARY = "9632367397";
-        const BACKUP  = "8088975913";
+    const PRIMARY = "9632367397";
+    const BACKUP = "8088975913";
 
-        function checkLogin() {
-            const user = JSON.parse(localStorage.getItem(USER_KEY) || "null");
-            if (!user?._id) {
-                document.getElementById("mainContainer").innerHTML = `
-                    <div style="text-align:center;padding:60px;color:#888">
-                        <h3>Login Required</h3>
-                        <p><a href="login.html" style="color:#00ff9d;font-weight:700">Go to Login</a></p>
-                    </div>`;
-                return null;
-            }
-            return user;
+    function checkLogin() {
+      const user = JSON.parse(localStorage.getItem(USER_KEY) || "null");
+      if (!user || !user._id) {
+        document.getElementById("mainContainer").innerHTML = `
+          <div class="login-required">
+            <h3>Login Required</h3>
+            <p>Please <a href="login.html">login</a> to place an order.</p>
+          </div>`;
+        return null;
+      }
+      return user;
+    }
+
+    function renderForm(user) {
+      const cart = JSON.parse(localStorage.getItem(CART_KEY) || "{}");
+      if (Object.keys(cart).length === 0) {
+        document.getElementById("mainContainer").innerHTML = `
+          <div style="text-align:center;padding:4rem;color:#888">
+            <h3>Cart is Empty</h3>
+            <p><a href="index.html" style="color:var(--accent)">Go Shopping</a></p>
+          </div>`;
+        return;
+      }
+
+      let itemsArray = [];
+      let overallTotal = 0;
+      let shopName = "ChatPoint";
+
+      for (const shop in cart) {
+        shopName = shop;
+        for (const itemName in cart[shop]) {
+          const item = cart[shop][itemName];
+          if (item.qty > 0) {
+            const total = item.price * item.qty;
+            overallTotal += total;
+            itemsArray.push({
+              name: itemName,
+              price: item.price,
+              quantity: item.qty
+            });
+          }
         }
+      }
 
-        function renderForm(user) {
-            // ... your renderForm code (unchanged) ...
-        }
+      const deliveryCharge = overallTotal >= 69 ? 0 : 30;
+      const grandTotal = overallTotal + deliveryCharge;
 
-        function renderCart() {
-            // ... your renderCart code (unchanged, with shopName and itemsArray) ...
-            let shopName = "Chat Point";
-            if (Object.keys(cart).length > 0) shopName = Object.keys(cart)[0];
+      window.tempOrderData = { itemsArray, overallTotal, deliveryCharge, grandTotal, shopName };
 
-            // ... rest unchanged ...
+      document.getElementById("mainContainer").innerHTML = `
+        <h2>Checkout</h2>
 
-            window.tempOrderData = { itemsArray, overallTotal, deliveryCharge, grandTotal, shopName };
-        }
+        <div id="successMsg" class="msg success" style="display:none;"></div>
+        <div id="errorMsg" class="msg error" style="display:none;"></div>
 
-        function validateForm() {
-            // ... unchanged ...
-        }
+        <div class="form-group">
+          <label>Name</label>
+          <input type="text" id="name" value="${user.name || ''}" required />
+        </div>
+        <div class="form-group">
+          <label>Phone</label>
+          <input type="tel" id="phone" value="${user.phone || ''}" required />
+        </div>
+        <div class="form-group">
+          <label>Address Line 1</label>
+          <textarea id="address1" rows="2" required placeholder="House no., Building, Street"></textarea>
+        </div>
+        <div class="form-group">
+          <label>Address Line 2 (Optional)</label>
+          <textarea id="address2" rows="2" placeholder="Landmark, Area"></textarea>
+        </div>
 
-        async function placeOrder() {
-            if (!validateForm()) return;
+        <div class="cart-summary">
+          <h3 style="margin-bottom:1rem;color:var(--accent);">Order Summary</h3>
+          ${itemsArray.map(it => `
+            <div class="cart-item">
+              <span>${it.name} × ${it.quantity}</span>
+              <span>₹${(it.price * it.quantity).toFixed(2)}</span>
+            </div>
+          `).join('')}
+          <div class="cart-item">
+            <span>Subtotal</span>
+            <span>₹${overallTotal.toFixed(2)}</span>
+          </div>
+          <div class="cart-item">
+            <span>Delivery Charge</span>
+            <span>${deliveryCharge === 0 ? 'FREE' : '₹' + deliveryCharge}</span>
+          </div>
+          <div class="total-row cart-item">
+            <span>Grand Total</span>
+            <span>₹${grandTotal.toFixed(2)}</span>
+          </div>
+        </div>
 
-            if (document.querySelector('input[name="paymentMode"]:checked').value !== "COD") {
-                alert("Online payment coming soon!");
-                return;
-            }
+        <button id="placeOrderBtn" class="btn">Place Order (Cash on Delivery)</button>
+      `;
 
-            const user = JSON.parse(localStorage.getItem(USER_KEY));
-            const { itemsArray, overallTotal, deliveryCharge, grandTotal, shopName } = window.tempOrderData || { itemsArray: [], overallTotal: 0, deliveryCharge: 30, grandTotal: 0, shopName: "Chat Point" };
+      document.getElementById("placeOrderBtn").onclick = placeOrder;
+    }
 
-            if (itemsArray.length === 0) {
-                document.getElementById("errorMsg").textContent = "Cart is empty!";
-                return;
-            }
+    async function placeOrder() {
+      const name = document.getElementById("name").value.trim();
+      const phone = document.getElementById("phone").value.trim();
+      const address1 = document.getElementById("address1").value.trim();
+      const address2 = document.getElementById("address2").value.trim();
 
-            const name = document.getElementById("name").value.trim();
-            const phone = document.getElementById("phone").value.trim();
-            const address1 = document.getElementById("address1").value.trim();
-            const address2 = document.getElementById("address2").value.trim();
+      if (!name || !phone || !address1) {
+        document.getElementById("errorMsg").textContent = "Please fill all required fields";
+        document.getElementById("errorMsg").style.display = "block";
+        return;
+      }
 
-            const btn = document.getElementById("placeOrderBtn");
-            btn.disabled = true;
-            btn.innerHTML = "Saving Order...";
+      const { itemsArray, overallTotal, deliveryCharge, grandTotal, shopName } = window.tempOrderData;
 
-            const orderData = {
-                user: { name, phone },
-                shop: shopName,
-                items: itemsArray,
-                totalAmount: grandTotal,
-                deliveryCharge: deliveryCharge,
-                address: {
-                    name,
-                    phone,
-                    line1: address1,
-                    line2: address2 || ""
-                },
-                paymentMethod: "cash",
-                status: "pending",
-                date: new Date().toISOString()
-            };
+      if (itemsArray.length === 0) {
+        document.getElementById("errorMsg").textContent = "Cart is empty!";
+        document.getElementById("errorMsg").style.display = "block";
+        return;
+      }
 
-            // ONLY add userId if it's a valid 24-char hex string (real ObjectId)
-            if (user && user._id && typeof user._id === 'string' && /^[a-f0-9]{24}$/i.test(user._id)) {
-                orderData.userId = user._id;
-            }
+      const user = JSON.parse(localStorage.getItem(USER_KEY));
 
-            console.log("Sending to server:", orderData);
+      const orderData = {
+        userId: user._id,
+        name,
+        phone,
+        address1,
+        address2,
+        grandTotal,
+        cart: { [shopName]: {} }
+      };
 
-            let saveSuccess = false;
-
-            try {
-                const res = await fetch(`${API_BASE}/api/save-order`, {
-                    method: "POST",
-                    headers: { "Content-Type": "application/json" },
-                    body: JSON.stringify(orderData)
-                });
-
-                const data = await res.json();
-                console.log("Server response:", data);
-
-                if (res.ok && data.success) {
-                    saveSuccess = true;
-                    document.getElementById("successMsg").innerHTML = "Order Saved Successfully!";
-                } else {
-                    throw new Error(data.message || "Validation failed");
-                }
-            } catch (err) {
-                console.error("Save failed:", err);
-                document.getElementById("errorMsg").textContent = "Server rejected order. Still sending via WhatsApp.";
-                setTimeout(() => document.getElementById("errorMsg").textContent = "", 6000);
-            }
-
-            localStorage.removeItem(CART_KEY);
-
-            let itemsList = "";
-            itemsArray.forEach(it => itemsList += `${it.name} × ${it.quantity}\n`);
-
-            const message = `Hello! New Order Received\n\n${itemsList}\nName: ${name}\nPhone: ${phone}\nAddress: ${address1}${address2 ? ', ' + address2 : ''}\nTotal: ₹${grandTotal} (${deliveryCharge === 0 ? 'Free Delivery' : '₹' + deliveryCharge + ' Delivery'})\n\nPlease confirm and deliver soon!`;
-            const encoded = encodeURIComponent(message);
-
-            document.getElementById("successMsg").innerHTML += " Opening WhatsApp...";
-
-            setTimeout(() => window.open(`https://wa.me/91${PRIMARY}?text=${encoded}`, '_blank'), 800);
-            setTimeout(() => window.open(`https://wa.me/91${BACKUP}?text=${encoded}`, '_blank'), 1800);
-        }
-
-        window.onload = () => {
-            const user = checkLogin();
-            if (user) renderForm(user);
+      // Reconstruct cart in expected format: { "ShopName": { "ItemName": { qty, price } } }
+      itemsArray.forEach(item => {
+        orderData.cart[shopName][item.name] = {
+          qty: item.quantity,
+          price: item.price
         };
-    </script>
+      });
+
+      const btn = document.getElementById("placeOrderBtn");
+      btn.disabled = true;
+      btn.innerHTML = "Placing Order...";
+
+      try {
+        const res = await fetch(`${API_BASE}/api/save-order`, {
+          method: "POST",
+          headers: { "Content-Type": "application/json" },
+          body: JSON.stringify(orderData)
+        });
+
+        const data = await res.json();
+        console.log("Server Response:", data);
+
+        if (res.ok && data.success) {
+          document.getElementById("successMsg").textContent = "Order Placed Successfully! 🎉";
+          document.getElementById("successMsg").style.display = "block";
+          localStorage.removeItem(CART_KEY);
+
+          // Send WhatsApp
+          let itemsList = itemsArray.map(i => `${i.name} × ${i.quantity}`).join("\n");
+          const message = `New Order!\n\n${itemsList}\n\nName: ${name}\nPhone: ${phone}\nAddress: ${address1}${address2 ? ', ' + address2 : ''}\nTotal: ₹${grandTotal} (${deliveryCharge === 0 ? 'Free Delivery' : '₹' + deliveryCharge + ' Delivery'})\n\nPlease confirm soon!`;
+          const encoded = encodeURIComponent(message);
+
+          setTimeout(() => window.open(`https://wa.me/91${PRIMARY}?text=${encoded}`, '_blank'), 1000);
+          setTimeout(() => window.open(`https://wa.me/91${BACKUP}?text=${encoded}`, '_blank'), 2000);
+
+          setTimeout(() => location.href = "orders.html", 3000);
+        } else {
+          throw new Error(data.message || "Server error");
+        }
+      } catch (err) {
+        console.error("Order failed:", err);
+        document.getElementById("errorMsg").textContent = "Failed to save online. Sending via WhatsApp...";
+        document.getElementById("errorMsg").style.display = "block";
+
+        // Fallback WhatsApp
+        let itemsList = itemsArray.map(i => `${i.name} × ${i.quantity}`).join("\n");
+        const message = `New Order (Online Failed)\n\n${itemsList}\n\nName: ${name}\nPhone: ${phone}\nAddress: ${address1}${address2 ? ', ' + address2 : ''}\nTotal: ₹${grandTotal}`;
+        const encoded = encodeURIComponent(message);
+        window.open(`https://wa.me/91${PRIMARY}?text=${encoded}`, '_blank');
+      }
+
+      btn.disabled = false;
+      btn.innerHTML = "Place Order (Cash on Delivery)";
+    }
+
+    // On Load
+    window.onload = () => {
+      const user = checkLogin();
+      if (user) renderForm(user);
+    };
+  </script>
 </body>
 </html>
